@@ -1,3 +1,14 @@
+2006-06-20  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
+	* source/inc/xcalc.hxx,
+	* source/ui/xcalc.cxx (disableCellUpdates, enableCellUpdates): added.
+
+	* source/service/service.cxx (solveModel): removed unused using statement.
+
+	* source/ui/solvemodel.cxx (parseConstraints, lcl_isNumeric): disabling and
+	enabling of cell updates before and after the model transform.  Slightly better
+	way of detecting a numerical String whose value is 0.
+
 2006-06-15  Kohei Yoshida  <kohei.yoshida@gmail.com>
 
 	* prj/build.lst: added missing dependencies to fix build failure.
